# Dbus-services

./: .gitignore  README.md  installer.sh
src/: .clang-format  CMakeLists.txt  PermissionManager-bindings.xml  SystemTimeService-bindings.xml
src/Application/: main.cpp
src/PermissionService/headers/: Database.h  PermissionService.h  permissions_adapter.h
src/PermissionService/sources/: main.cpp
src/PermissionServiceClient/headers/: PermissionClient.h  PermissionServiceClient.h
src/SystemTimeService/headers/: SystemTimeService.h  time_adaptor.h
src/SystemTimeService/sources/: main.cpp
src/SystemTimeServiceClient/headers/: SystemTimeServiceClient.h  time_adaptor_client.h
